# backend/src/banks/dto/create-bank-link.dto.ts
@@ -1,0 +1,13 @@
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class CreateBankLinkDto {
+  @IsString()
+  @IsNotEmpty()
+  bankId: string;
+}
+
+export class BankLinkResponseDto {
+  @IsString()
+  @IsNotEmpty()
+  link: string;
+}
