# backend/src/banks/dto/get-banks-response.dto.ts
@@ -1,0 +1,19 @@
+import { IsString, IsNotEmpty, IsUrl } from 'class-validator';
+
+export class GetBanksResponseDto {
+  @IsString()
+  @IsNotEmpty()
+  id: string;
+
+  @IsString()
+  @IsNotEmpty()
+  name: string;
+
+  @IsString()
+  @IsNotEmpty()
+  bic: string;
+
+  @IsString()
+  @IsUrl()
+  logo: string;
+}
