# backend/src/requisition/requisition.controller.ts
@@ -1,5 +1,6 @@
 import { Controller, Get, Param } from '@nestjs/common';
 import { RequisitionService } from './requisition.service';
+import { AccountResponseDto } from './dto/get-accounts-response.dto';
 
 @Controller('requisition')
 export class RequisitionController {
@@ -8,7 +9,7 @@ export class RequisitionController {
   @Get(':externalRequisitionId/accounts')
   async getAccounts(
     @Param('externalRequisitionId') externalRequisitionId: string,
-  ) {
+  ): Promise<AccountResponseDto[]> {
     return this.requisitionService.getAccounts(externalRequisitionId);
   }
 }
